--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "school-management-system",
-    "version": "1.0.0",
-    "scripts": {
-      "build": "cd frontend && npm install && npm run build",
-      "start": "cd backend && npm install && npm start",
-      "install-all": "cd backend && npm install && cd ../frontend && npm install"
-    },
-    "engines": {
-      "node": ">=18.0.0"
-    }
+  "name": "school-management-system",
+  "version": "1.0.0",
+  "scripts": {
+    "build": "cd frontend && npm install && npx vite build",
+    "start": "cd backend && npm install && npm start",
+    "install-all": "cd backend && npm install && cd ../frontend && npm install"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
+}
